--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "aos": "2.3.4",
     "lodash": "4.17.20",
+    "lorem-ipsum": "2.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-particles-js": "3.4.1",
